--- a/PerfilesgitHub/index.html
+++ b/PerfilesgitHub/index.html
@@ -12,39 +12,49 @@
 
 <body>
     <div id="app">
-        <!-- Favorites -->
+        <!-- ya que TodosFavoritos devuelve el array -->
         <div class="favorites">
+            <div class="favorite" v-for="alias in TodosFavoritos">
+                <a href="">
+                    <img v-bind:src="alias.avatar_url" alt="" class="favorite__avatar">
+                </a>
+            </div>
         </div>
 
         <!-- Content -->
         <article class="content">
             <h1 class="content__title">Search GitHub users</h1>
-            <center><p>{{message}}</p></center>
-            <!-- Search -->
-            <form class="search" v-on:submit.prevent="Buscar">
+
+            <form class="search" v-on:submit.prevent="buscar">
                 <input v-model="busqueda" type="text" class="search__input" required placeholder="Search GitHub users">
-                <input type="submit" class="search__submit" value="Buscar">
+                <input type="submit" class="search__submit" value="Search">
             </form>
 
             <!-- Result -->
             <div class="result" v-if="result">
-                <h2 class="result__name">Carlos Haymer Gonzalez Valencia</h2>
-                <img src="img/elpo.jpg" alt="" class="result__avatar">
-                <p class="result__bio">Aprendiz exitoso graduado de la Tecnología en ADSI.
-                    Les desea muy buenos dias a los señores y señoras de tercera edad.
-                    <br>
-                    <a href="www.google.com" style="color: white;">El creo está página con la compañia de sus compañeros</a>
-                </p>
+                <a v-if="estaFavoritos" class="result__toggle-favorite" href="" v-on:click.prevent="removeFavorito">Eliminar favorito
+                    <img src="img/delete.png" alt="" width="30" height="30"/>
+                </a>
+                <a v-else class="result__toggle-favorite" href="" v-on:click.prevent="addFavorito">Añadir favoritos
+                    <img src="img/corazon.png" alt="" width="30" height="30"/>
+                </a>
+                <h2 class="result__name">{{result.name}}</h2>
+                <img v-bind:src="result.avatar_url" alt="" class="result__avatar">
+                <p class="result__bio">{{result.bio}}</p>
+                <br>
+                <a v-bind:href="result.html_url" class="">Repositorios</a>
             </div>
+
+            <!--cuado no ha habido una busqueda-->
+            <p v-else>Esperando por la busqueda</p>
             <!-- Error -->
-            <div class="result__error"></div>
+            <div v-if="error" class="result__error">Error</div>
         </article>
     </div>
     <script src="js/main.js"></script>
     <script>
-        // una constante para guardar el acoplamiento
-        const mountedApp = app.mount('#app')
+        //creamos una constante para guardar el acoplamiento
+        const A = app.mount('#app')
     </script>
 </body>
-
 </html>
